--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
 body {
-    max-width: 100vw;
-    max-height: 100vh;
-    min-width: 690px;
-    min-height: 30%;
+    width: 100vw;
+    height: 100vh;
     font-family: "Poppins", sans-serif;
     background-color: black;
     color: white;
@@ -97,6 +95,21 @@ a:hover {
     margin: auto;
 }
 
+.modTrigger {
+    animation-name: slideIn;
+    animation-duration: 1s;
+    animation-delay: 0.8s;
+    animation-fill-mode: backwards;
+    display: block;
+    margin: auto;
+    background-color: transparent;
+    padding: 2%;
+}
+
+.modTrigger i {
+    font-size: 30px;
+}
+
 #greet {
     text-align: center;
 }
@@ -150,8 +163,12 @@ h3 {
     display: block;
 }
 
-#texto_apresentacao {
+.texto_apresentacao {
     margin-top: 2rem;
+    font-weight: lighter;
+}
+
+#texto_apresentacao {
     font-weight: lighter;
 }
 
