--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     font-family: "Poppins", sans-serif;
     background-color: black;
     color: white;
