--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 body {
     width: 100vw;
     height: 100%;
+    min-height: 100vh;
+    max-width: 100vw;
     font-family: "Poppins", sans-serif;
     background-color: black;
     color: white;
